prepare minimal scala spark configuration