@@ -1,8 +1,35 @@
 ThisBuild / version := "0.1.0-SNAPSHOT"
 
-ThisBuild / scalaVersion := "2.13.14"
+ThisBuild / scalaVersion := "2.12.18"
+
+val sparkVersion = "3.5.2"
 
 lazy val root = (project in file("."))
   .settings(
-    name := "scala-spark-data-engineering"
+    name := "scala-spark-data-engineering",
+    libraryDependencies ++= Seq(
+      "org.apache.spark" %% "spark-core" % sparkVersion,
+      "org.apache.spark" %% "spark-sql" % sparkVersion,
+      "org.apache.spark" %% "spark-streaming" % sparkVersion,
+//      "org.apache.hadoop" % "hadoop-aws" % "3.4.0"
+    ),
+
+    // Enable forking to allow setting JVM options
+    fork := true,
+
+    // Set JVM options for running the application
+    Compile / run / javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+    ),
+
+    // Set JVM options for tests, if necessary
+    Test / javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+    )
   )
